--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,25 @@
-.App {
-  text-align: center;
+.calendar-container {
+  max-width:80%; /* Set a maximum width for the calendar */
+  
+  margin: 0 auto; /* Center the calendar */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.custom-calendar {
+  width: 100% !important; /* Ensure the calendar takes full width of the container */
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.custom-calendar .react-calendar__tile {
+  height: 100px; /* Adjust the height of the tiles if needed */
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dot {
+  width: 5px;
+  height: 5px;
+  background-color: red;
+  border-radius: 50%;
+  position: absolute;
+  bottom: 5px;
 }
